commit 140 : 파일 dom 초기화시, deleteFile 리스트도 초기화

--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -116,7 +116,7 @@
         const newPasswordChk = $("#newPasswordChk")
 
         $(document).ready(function() {
-            if(user.city.length == 0 || user.street.length == 0 || user.zipcode.length == 0) alert("주소 정보를 입력해주세요.")
+            if(user.city.length == 0 || user.street.length == 0 || user.zipcode.length == 0) Util.alert("주소 정보를 입력해주세요.", 'w')
 
             newPassword.on('input', chckValidate)
             newPasswordChk.on('input', chckValidate)
