commit 141 - 메시지 테이블 추가 (톡톡을 위한 테이블) - 사용자의 경우 'ROLE_SUPER'권한의 사용자와만 톡톡 가능 - 'ROLE_SUPER'사용자의 경우 자신에게 톡톡이 온 사용자와 톡톡 가능 - alert icon따라서 btn도 success, warning 나눔

--- a/src/main/resources/templates/bbs/faq/edit.html
+++ b/src/main/resources/templates/bbs/faq/edit.html
@@ -84,7 +84,7 @@
                         form.classList.add("was-validated")
                     } else {
                         event.preventDefault();
-                        if(ckEditor.getData().length === 0) Util.alert("내용을 입력해주세요.", 'w')
+                        if(ckEditor.getData().length === 0) Util.alert("내용을 입력해주세요.", 'w' , 'w')
                         else {
                             const obj = {
                                 'title' : $("#title").val(),
