--- a/src/main/resources/templates/manager/user.html
+++ b/src/main/resources/templates/manager/user.html
@@ -131,7 +131,7 @@
                                 window.location.href='/manager/user'
                             })
                         }else {
-                            Util.alert("해당 사용자의 계정 정지 해제에 실패했습니다.", 'w')
+                            Util.alert("해당 사용자의 계정 정지 해제에 실패했습니다.", 'w', 'w')
                         }
                     },
                     error: function (xhr, status, error) {
