--- a/src/main/resources/templates/order/cartIndex.html
+++ b/src/main/resources/templates/order/cartIndex.html
@@ -147,9 +147,9 @@
 
         $(document).ready(function(e) {
             window.history.replaceState({}, document.title, window.location.pathname);
-            if(ids !== null) Util.alert("선택하신 상품들에 대한 정보 및 주소정보를 확인해주세요.", 'w')       // 만일 장바구니 선택 없이 넘어오게되면 내보내기
+            if(ids !== null) Util.alert("선택하신 상품들에 대한 정보 및 주소정보를 확인해주세요.", 'w', 'w')       // 만일 장바구니 선택 없이 넘어오게되면 내보내기
             else {
-                Util.alert("잘못된 접근입니다.", 'w').then(() => {
+                Util.alert("잘못된 접근입니다.", 'w', 'w').then(() => {
                     window.location.href = "/"
                 })
             }
@@ -209,7 +209,7 @@
                                     window.location.href = '/user/order'
                                 })
                             } else {
-                                Util.alert(`죄송합니다. 해당 상품들중 현재 재고가 없는 상품이 있어 주문에 실패하였습니다.`, 'w')
+                                Util.alert(`죄송합니다. 해당 상품들중 현재 재고가 없는 상품이 있어 주문에 실패하였습니다.`, 'w', 'w')
                             }
                         },
                         error: function (xhr, status, error) {
@@ -267,7 +267,7 @@
                                                 addressChanging(true)
                                             })
                                         } else {
-                                            Util.alert("주소 변경에 실패하였습니다.", 'w')
+                                            Util.alert("주소 변경에 실패하였습니다.", 'w', 'w')
                                         }
                                     },
                                     error: function (xhr, status, error) {
