--- a/src/main/resources/templates/user/review.html
+++ b/src/main/resources/templates/user/review.html
@@ -186,7 +186,7 @@
                                 window.location.href = `/user/review`
                             })
                         }else {
-                            Util.alert("해당 리뷰 삭제에 실패했습니다.", 'w')
+                            Util.alert("해당 리뷰 삭제에 실패했습니다.", 'w', 'w')
                         }
                     },
                     error: function (xhr, status, error) {
@@ -265,7 +265,7 @@
                                     window.location.href = '/user/review'
                                 })
                             } else {
-                                Util.alert("해당 리뷰 수정에 실패했습니다.", 'w')
+                                Util.alert("해당 리뷰 수정에 실패했습니다.", 'w', 'w')
                             }
                         },
                         error: function (xhr, status, error) {
