--- a/src/main/resources/templates/manager/coupon.html
+++ b/src/main/resources/templates/manager/coupon.html
@@ -433,7 +433,7 @@
                return $(this).data('user')
            }).get();
 
-           if(lst.length === 0) Util.alert('승인할 사용자 요청을 선택하세요.', 'w')
+           if(lst.length === 0) Util.alert('승인할 사용자 요청을 선택하세요.', 'w', 'w')
            else {
                const obj = {'couponId': requestCouponId, 'requestId': lst, 'userId': user}
                $.ajax({
@@ -448,7 +448,7 @@
                                window.location.href = '/manager/coupon'
                            })
                        } else {
-                           Util.alert(`죄송합니다. 요청 승인에 실패했습니다.`, 'w')
+                           Util.alert(`죄송합니다. 요청 승인에 실패했습니다.`, 'w', 'w')
                        }
                    },
                    error: function (xhr, status, error) {
@@ -465,7 +465,7 @@
                return $(this).val()
            }).get();
 
-           if(lst.length === 0) Util.alert('쿠폰을 발급할 사용자를 선택하세요.', 'w')
+           if(lst.length === 0) Util.alert('쿠폰을 발급할 사용자를 선택하세요.', 'w', 'w')
            else {
                const obj = {'couponId': chooseCouponId, 'userId': lst}      // 체크된 사용자들에게 쿠폰 발급
                $.ajax({
@@ -480,7 +480,7 @@
                                window.location.href = '/manager/coupon'
                            })
                        } else {
-                           Util.alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`, 'w')
+                           Util.alert(`죄송합니다. 쿠폰 발급에 실패했습니다.`, 'w', 'w')
                        }
                    },
                    error: function (xhr, status, error) {
@@ -505,7 +505,7 @@
                                    window.location.href = `/manager/coupon`
                                })
                            }else {
-                               Util.alert("삭제에 실패했습니다.", 'w')
+                               Util.alert("삭제에 실패했습니다.", 'w', 'w')
                            }
                        },
                        error: function (error) {
@@ -590,7 +590,7 @@
                        const start = new Date(obj['startDate'])
                        const end = new Date(obj['endDate'])
 
-                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w')       // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
+                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w', 'w')       // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
                            $.ajax({
                                type: 'POST',
@@ -604,7 +604,7 @@
                                            window.location.href = '/manager/coupon'
                                        })
                                    } else {
-                                       Util.alert(`쿠폰 등록에 실패했습니다.`, 'w')
+                                       Util.alert(`쿠폰 등록에 실패했습니다.`, 'w', 'w')
                                    }
                                },
                                error: function (xhr, status, error) {
@@ -632,7 +632,7 @@
                        const start = new Date(obj['startDate'])
                        const end = new Date(obj['endDate'])
 
-                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w')   // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
+                       if(start > end) Util.alert("쿠폰 사용 종료일이 시작일보다 먼저 올수는 없습니다.", 'w', 'w')  // 쿠폰 사용 시작일보다 종료일이 앞서는 경우, 막기
                        else {
                            $.ajax({
                                type: 'PUT',
@@ -646,7 +646,7 @@
                                            window.location.href = `/manager/coupon`
                                        })
                                    } else {
-                                       Util.alert("쿠폰 변경에 실패했습니다.", 'w')
+                                       Util.alert("쿠폰 변경에 실패했습니다.", 'w', 'w')
                                    }
                                },
                                error: function (xhr, status, error) {
