--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -1,6 +1,8 @@
 <th:block th:fragment="script">
     <script th:src="@{'/assets/js/jquery/jquery.min.js'}"></script>
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
+    <script th:src="@{'/assets/js/table/tui-grid.js'}"></script>
+    <script th:src="@{'/assets/js/table/tabulator.min.js'}"></script>
     <script th:src="@{'/assets/js/core/util.js'}"></script>
     <script th:src="@{'/assets/js/feather/feather.js'}"></script>
     <script th:src="@{'/assets/js/sweetalert2/sweetalert2.js'}"></script>
